@@ -73,6 +73,10 @@ namespace detail {
     bool f_outbound_transparent;
     /// Set outbound transparency.
     self& setOutboundTransparent(bool);
+    /// Transparent pass-through.
+    bool f_transparent_passthrough;
+    /// Set transparent passthrough.
+    self& setTransparentPassthrough(bool);
     /// Accepting backdoor connections.
     bool backdoor;
     /// Set backdoor accept.
@@ -87,6 +91,7 @@ namespace detail {
     : transport_type(0)
     , outbound_port(0)
     , f_outbound_transparent(false)
+    , f_transparent_passthrough(false)
     , backdoor(false)
   {
     memcpy(host_res_preference, host_res_default_preference_order, sizeof(host_res_preference));
@@ -125,6 +130,12 @@ namespace detail {
   }
 
   inline HttpAcceptOptions&
+  HttpAcceptOptions::setTransparentPassthrough(bool flag) {
+    f_transparent_passthrough = flag;
+    return *this;
+  }
+
+ inline HttpAcceptOptions&
   HttpAcceptOptions::setBackdoor(bool flag) {
     backdoor = flag;
     return *this;
